Fix HTML structure and update links

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <title>Romise Cosmetic Store</title>
     <link rel="stylesheet" href="FOOD.css">
 </head>
- <a href="file:///C:/Users/martin/Desktop/PROMISE/nessa%20home.html">HOME</a>
- <a href="file:///C:/Users/martin/Desktop/PROMISE/nessa%20about.html">ABOUT US</a>
- <a href="file:///C:/Users/martin/Desktop/PROMISE/nessa%20contact.html">CONTACT US</a>
+ <a href="nessa home.html">HOME</a>
+ <a href="nessa about.html">ABOUT US</a>
+ <a href="nessa contact.html">CONTACT US</a>
 <header>
     ROMISE COSMETIC STORE
 </header>
@@ -37,4 +37,5 @@
 
 </body>
 </html>
+
 
