Refactor index.html structure and add nav element

--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,18 +6,25 @@
     <title>Romise Cosmetic Store</title>
     <link rel="stylesheet" href="FOOD.css">
 </head>
- <a href="nessa home.html">HOME</a>
- <a href="nessa about.html">ABOUT US</a>
- <a href="nessa contact.html">CONTACT US</a>
+
+<body>
+
+<nav>
+    <a href="nessa home.html">HOME</a>
+    <a href="nessa about.html">ABOUT US</a>
+    <a href="nessa contact.html">CONTACT US</a>
+</nav>
+
 <header>
     ROMISE COSMETIC STORE
 </header>
-  <center> <h1> BEAUTY THAT SHINES FROM WITHIN</h1></center>
-</div>
+
+<center>
+    <h1>BEAUTY THAT SHINES FROM WITHIN</h1>
+</center>
 
 <h2 class="section-title">Our Products</h2>
 
-  <center> <h1> BEAUTY THAT SHINES FROM WITHIN</h1></center>
 <div class="gallery">
     <img src="ROME1.jpg">
     <img src="ROME2.jpg">
@@ -31,11 +37,10 @@
     <img src="ROME9.jpg">
     <img src="ROME10.jpg">
 </div>
+
 <footer>
     © 2025 Romise Cosmetic Store — All Rights Reserved
 </footer>
 
 </body>
 </html>
-
-
