Fix HTML structure and update navigation link

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <nav>
-    <a href="nessa home.html">HOME</a>
+    <a href="index.html">HOME</a>
     <a href="nessa about.html">ABOUT US</a>
     <a href="nessa contact.html">CONTACT US</a>
 </nav>
@@ -44,3 +44,4 @@
 
 </body>
 </html>
+
