Refactor HTML structure and navigation links

--- a/nessa about.html
+++ b/nessa about.html
@@ -5,9 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Romise Cosmetic Store</title>
     <link rel="stylesheet" href="FOOD.css">
- <a href="file:///C:/Users/martin/Desktop/PROMISE/nessa%20home.html">HOME</a>
- <a href="file:///C:/Users/martin/Desktop/PROMISE/nessa%20about.html">ABOUT US</a>
- <a href="file:///C:/Users/martin/Desktop/PROMISE/nessa%20contact.html">CONTACT US</a>
+<nav>
+    <a href="index.html">HOME</a>
+    <a href="nessa about.html">ABOUT US</a>
+    <a href="nessa contact.html">CONTACT US</a>
+</nav>
+
 <body>
 
 <header>
@@ -30,4 +33,5 @@ to get over all ur beauty complicationsWelcome to <strong>Romise Cosmetic Store<
     and find products that match your beauty goals.
 </div>
 </body>
+
 </html>
