--- a/nessa contact.html
+++ b/nessa contact.html
@@ -6,9 +6,11 @@
     <title>Romise Cosmetic Store</title>
     <link rel="stylesheet" href="FOOD.css">
 </head>
- <a href="file:///C:/Users/martin/Desktop/PROMISE/nessa%20home.html">HOME</a>
-  <a href="file:///C:/Users/martin/Desktop/PROMISE/nessa%20about.html">ABOUT US</a>
- <a href="file:///C:/Users/martin/Desktop/PROMISE/nessa%20contact.html">CONTACT US</a>
+<nav>
+    <a href="index.html">HOME</a>
+    <a href="nessa about.html">ABOUT US</a>
+    <a href="nessa contact.html">CONTACT US</a>
+</nav>
 
 <header>
     ROMISE COSMETIC STORE
@@ -28,4 +30,5 @@
 </footer>
 
 </body>
+
 </html>
